--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -12,7 +12,7 @@ body {
     padding: 0;
 }
 
-div#content {
+div#content, div.content {
     border-style: double;
     border-color: lightgreen;
 
