Pausing cause i was an idiot and forgot the SUDO password for AWS

--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -61,3 +61,7 @@ div#content, div.content {
 textarea {
     resize: unset;
 }
+.form-control, .form-control:focus {
+    background-color: rgba(0,100,0,.8);
+    color: lightgreen;
+}
