--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -1,6 +1,6 @@
 a:link, a:visited {
     background-color:rgba(0,255,0,.4);
-    width: 50%;
+    /*width: 50%;*/
     margin: .1%;
     color: rgba(0, 53, 208, 0.8);
     padding: 1% 1%;
@@ -39,7 +39,7 @@ div#content, div.content {
     border-style: double;
     border-color: lightgreen;
 
-    width: 50%;
+    /*width: 50%;*/
 
     /*padding: 1%;*/
     margin-left: auto;
