--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -1,6 +1,15 @@
+
+a.copyright {
+    display: inline-block;
+    overflow-wrap: normal;
+    margin: 1%;
+    border-color: gold;
+
+}
+
 a:link, a:visited {
+    white-space: pre-wrap;
     background-color:rgba(0,255,0,.4);
-    /*width: 50%;*/
     margin: .1%;
     color: rgba(0, 53, 208, 0.8);
     padding: 1% 1%;
@@ -13,14 +22,15 @@ a:link, a:visited {
 a:hover, a:active {
     background-color:rgba(0,255,0,.8);
     color: rgba(0, 53, 208, 0.8);
-
 }
 
-a.copyright {
+span.copyrightText{
     display: inline-block;
-    width: 49%;
-    border-color: gold;
+    vertical-align: middle;
+    line-height: normal;
 }
+
+
 
 html, body{
     height: 100%;
